--- a/css/style.css
+++ b/css/style.css
@@ -241,17 +241,17 @@ input: -webkit-autofill:focus {
     padding-top: 20px;
 }
 #header .header_menu ul.main_menu li a {
-    color: #393939;
+    /* color: #393939; */
     font-size: 14px;
     text-transform: uppercase;
     font-weight: 600;
     font-family: 'Roboto Slab', serif;
 }
 #header .header_menu ul.main_menu li a:hover {
-    color: #4DA91C;
+    /* color: #4DA91C; */
 }
 #header .header_menu ul.main_menu li.active a {
-    color: #4DA91C;
+    /* color: #4DA91C; */
 }
 #header .header_menu ul.main_menu li,
 #header .header_menu ul.main_menu li.active a {
@@ -268,8 +268,7 @@ input: -webkit-autofill:focus {
     transition: width .5s ease, background-color .5s ease;
     margin-top: 6px;
 }
-#header .header_menu ul.main_menu li:hover:after,
-#header .header_menu ul.main_menu li.active:after {
+#header .header_menu ul.main_menu li:hover:after {
     width: 90%;
     background: #4DA91C;
 }
@@ -547,10 +546,16 @@ input: -webkit-autofill:focus {
     font-size: 16px;
     font-family: 'Roboto Slab', serif;
     font-weight: 400;
+    height: 200px;
+    width: 220px;
 }
 #portfolio .notes .note:hover .img_overlay,
 #portfolio .notes .note:hover .img_overlay p {
     opacity: 10;
+}
+
+#portfolio .notes .note{
+  padding: 10px;
 }
 
 /*Achivment*/
