Change logo design.

--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,10 @@ input: -webkit-autofill:focus {
 }
 #header .header_menu .custom_navbar-brand {
     padding-left: 0;
+    padding-bottom: 5.5em;
+    margin-top: -25px;
+    max-height:100px;
+    width:45%
 }
 #header .header_menu .navbar-default {
     background-color: rgba(255, 255, 255, 0);
